--- a/dossier2/index1.html
+++ b/dossier2/index1.html
@@ -23,19 +23,32 @@
 
                 <nav class="menu">
                     <div class="openMenu"><i class="fa fa-bars"></i></div>
-                    <a href="index.html" title="Aller à la page d'accueil">Accueil</a>
-                    <a href="qui-sommes-nous.html" title="Présentation de notre société">Qui sommes-nous?</a
-            >
-            <a href="contact.html" title="Contactez-nous">Contact & Tarifs</a>
-                    <div class="closeMenu"><i class="fa fa-times"></i></div>
-                </nav>
-            </div>
-            <div class="header-title">
-                <p>Frère MEZIANE Hydraulique - Forage de Puits</p>
-            </div>
+                    <ul class="mainMenu">
+                        <li>
+                            <a href="index.html" title="Aller à la page d'accueil">Accueil</a
+                >
+              </li>
+              <li>
+                <a
+                  href="qui-sommes-nous.html"
+                  title="Présentation de notre société"
+                  >Qui sommes-nous?</a
+                >
+              </li>
+              <li>
+                <a href="contact.html" title="Contactez-nous"
+                  >Contact & Tarifs</a
+                >
+              </li>
+            </ul>
+            <div class="closeMenu"><i class="fa fa-times"></i></div>
+          </nav>
         </div>
+        <div class="header-title">
+          <p>Frère MEZIANE Hydraulique - Forage de Puits</p>
+        </div>
+      </div>
     </div>
     <script src="./app.js"></script>
-</body>
-
+  </body>
 </html>
